--- a/CodeGenUtility/src/main/resources/application.properties
+++ b/CodeGenUtility/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://10.67.5.245/bdingestion
+spring.datasource.url=jdbc:mysql://10.67.5.245:3306/BDINGESTION
 spring.datasource.username=root
 spring.datasource.password=NEWPASSWORD
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
