--- a/CodeGenUtility/src/main/resources/application.properties
+++ b/CodeGenUtility/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.username=root
 spring.datasource.password=NEWPASSWORD
 #spring.datasource.password=root
 server.port=8090
+#server.address=10.76.183.21
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 # Number of ms to wait before throwing an exception if no connection is available.
 spring.datasource.tomcat.max-wait=10000
