--- a/CodeGenUtility/src/main/resources/application.properties
+++ b/CodeGenUtility/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.datasource.url=jdbc:mysql://10.67.5.245:3306/BDINGESTION
 #spring.datasource.url=jdbc:mysql://localhost:3306/BDINGESTION
+security.user.name=user
+security.user.password=password
 spring.datasource.username=root
 spring.datasource.password=NEWPASSWORD
 #spring.datasource.password=root
