Code for login. js is pending

--- a/CodeGenUtility/src/main/resources/application.properties
+++ b/CodeGenUtility/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-spring.datasource.url=jdbc:mysql://10.67.5.245:3306/BDINGESTION
-#spring.datasource.url=jdbc:mysql://localhost:3306/BDINGESTION
 security.user.name=user
 security.user.password=password
+security.enable-csrf=false
+security.ignored=/,/index.html,/login.html
+spring.datasource.url=jdbc:mysql://10.67.5.245:3306/BDINGESTION
+#spring.datasource.url=jdbc:mysql://localhost:3306/BDINGESTION
 spring.datasource.username=root
 spring.datasource.password=NEWPASSWORD
 #spring.datasource.password=root
