--- a/CodeGenUtility/src/main/resources/application.properties
+++ b/CodeGenUtility/src/main/resources/application.properties
@@ -17,3 +17,5 @@ spring.datasource.tomcat.max-wait=10000
 spring.datasource.tomcat.max-active=50
 # Validate the connection before borrowing it from the pool.
 spring.datasource.tomcat.test-on-borrow=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
