--- a/CodeGenUtility/src/main/resources/application.properties
+++ b/CodeGenUtility/src/main/resources/application.properties
@@ -19,3 +19,5 @@ spring.datasource.tomcat.max-active=50
 spring.datasource.tomcat.test-on-borrow=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss 
+spring.jackson.time-zone=IST
