Modified logic for time zone

--- a/CodeGenUtility/src/main/resources/application.properties
+++ b/CodeGenUtility/src/main/resources/application.properties
@@ -20,4 +20,4 @@ spring.datasource.tomcat.test-on-borrow=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss 
-spring.jackson.time-zone=IST
+spring.jackson.time-zone=CST
