--- a/CodeGenUtility/pom.xml
+++ b/CodeGenUtility/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>com.ge</groupId>
 	<artifactId>CodeGenUtility</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 
 	<name>Data Code Generation Utility</name>
 	<description>Data Code Generation Utility</description>
@@ -28,6 +28,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
