--- a/CodeGenUtility/src/main/resources/application.properties
+++ b/CodeGenUtility/src/main/resources/application.properties
@@ -2,8 +2,8 @@ security.user.name=user
 security.user.password=password
 security.enable-csrf=false
 security.ignored=/,/index.html,/login.html
-spring.datasource.url=jdbc:mysql://10.67.5.245:3306/BDINGESTION
-#spring.datasource.url=jdbc:mysql://localhost:3306/BDINGESTION
+#spring.datasource.url=jdbc:mysql://10.67.5.245:3306/BDINGESTION
+spring.datasource.url=jdbc:mysql://10.229.164.245:3306/BDINGESTION
 spring.datasource.username=root
 spring.datasource.password=NEWPASSWORD
 #spring.datasource.password=root
