Changed database details

--- a/CodeGenUtility/src/main/resources/application.properties
+++ b/CodeGenUtility/src/main/resources/application.properties
@@ -3,10 +3,11 @@ security.user.password=password
 security.enable-csrf=false
 security.ignored=/,/index.html,/login.html
 #spring.datasource.url=jdbc:mysql://10.67.5.245:3306/BDINGESTION
+#spring.datasource.username=root
+#spring.datasource.password=NEWPASSWORD
 spring.datasource.url=jdbc:mysql://10.229.164.245:3306/BDINGESTION
-spring.datasource.username=root
-spring.datasource.password=NEWPASSWORD
-#spring.datasource.password=root
+spring.datasource.username=bdingestion
+spring.datasource.password=bd!ngestion@G3hc
 server.port=8091
 server.session.timeout=1800
 #server.address=10.76.183.21
